# Quadruped_Robot

./: .gitignore  ReadMe.md
Frame/STLs/: Coxa_Bottom.stl  Coxa_Cover.stl  Femur_Backplate.stl  Femur_Cover_Left.stl  Femur_Cover_Right.stl
Frame/SolidWorks/SLDASM/: Body.SLDASM  Coxa.SLDASM  Femur.SLDASM  Leg.SLDASM  jebediah.SLDASM
Frame/SolidWorks/SLDASM/Auxiliary models/: Rpi3 case.SLDPRT
Frame/SolidWorks/SLDPRT/: Chassis_Bottom.SLDPRT  Chassis_Top.SLDPRT  Coxa Covers.SLDPRT  Coxa1.sldprt  Coxa2.sldprt  Femur Backplate.SLDPRT  Femur Cover Left.SLDPRT  Femur Cover Right.SLDPRT  Femur Frontplate.SLDPRT  M3 Heat Set Insert.SLDPRT  Tibia.SLDPRT
Simulation/V-REP/: Jebediah.ttt
Simulation/jebediah/: CMakeLists.txt  model.config  package.xml
Simulation/jebediah/launch/: display.launch  empty_world.launch  empty_world_server.launch  gazebo.launch  gazebo_server.launch  gazebo_tilted.launch
Simulation/jebediah/meshes/: 10cm.stl  10m.stl  10mm.stl  15cm.stl  15m.stl  15mm.stl  5cm.stl  5m.stl  5mm.stl  Coxa_1.STL  Femur_1.STL  Femur_4.STL  Femur_Collision.stl  Tibia_1.STL  Tibia_Collision.stl  base_link_collision.stl  coxa_collision.stl  rough.stl
Simulation/jebediah/sdf/: jebediah.sdf
Simulation/jebediah/urdf/: jebediah.urdf
Simulation/jebediah/worlds/: tilted_5_deg.world  tilted_map_5.launch
Simulation/jebediah/worlds/5degrees/: model.config  model.sdf
URDF/jebediah/: package.xml
URDF/jebediah/config/: joint_names_jebediah.yaml
URDF/jebediah/meshes/: Coxa_1.STL  Tibia_1.STL  base_link.STL
(+7 files in other folders)
