<package>
  <name>jebediah</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for jebediah</p>
    <p>This package contains configuration data, 3D models and launch files
for jebediah robot.</p>
    <p> It was created based on Toglefritz Jebediah quadruped found on https://github.com/Toglefritz/Quadruped_Robot.</p>
  </description>
  <author>me</author>
  <maintainer email="me2email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>
